--- a/components/mdx/tableOfContents/tableOfContents.module.scss
+++ b/components/mdx/tableOfContents/tableOfContents.module.scss
@@ -15,8 +15,7 @@
 
   .title {
     text-transform: uppercase;
-    font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial,
-      sans-serif;
+    font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial, sans-serif;
     letter-spacing: 1.9px;
     font-size: 1.7rem;
     margin-bottom: 1.7rem;
