--- a/components/tile/newsletter/newsletterTile.module.scss
+++ b/components/tile/newsletter/newsletterTile.module.scss
@@ -18,8 +18,7 @@
   .title {
     padding: 0.5rem;
     font-size: 1.7rem;
-    font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial,
-      sans-serif;
+    font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: normal;
     max-width: 30rem;
   }
