--- a/styles/_theme.scss
+++ b/styles/_theme.scss
@@ -8,8 +8,7 @@ pre[data-lang]:not(pre[data-lang=""]) {
     right: 2.5rem;
     top: 1px;
     transform: translateY(-100%);
-    font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial,
-      sans-serif;
+    font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     background-color: var(--syntax-background);
     font-weight: 600;
