--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -1,8 +1,7 @@
 @use "_mixins";
 
 body {
-  font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial,
-    sans-serif;
+  font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 h1,
