--- a/components/blog/category/list/categoriesList.module.scss
+++ b/components/blog/category/list/categoriesList.module.scss
@@ -11,8 +11,7 @@
 
   .title {
     text-transform: uppercase;
-    font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial,
-      sans-serif;
+    font-family: var(--font-walsheim), "Helvetica Neue", Helvetica, Arial, sans-serif;
     letter-spacing: 1.9px;
     font-size: 1.7rem;
   }
